--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>My first ever website.</h1>
+    <h2>look hey I just know that how to add on git.</h2>
     
 </body>
 </html>
