--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <body>
     <h1>My first ever website.</h1>
     <h2>look hey I just know that how to add on git.</h2>
-    <button> click me here.</button>
+    <input type="text">
+
+    <button>click for inter </button>
     
 </body>
 </html>
